Set benchmark run time to 30s